syntax = "proto3";

package twerion.armada;

option java_package = "net.twerion.armada";
option java_multiple_files = true;

message Label {
  string name = 1;
  string value = 2;
}

message LabelSet {
  repeated Label labels = 1;
}

message LabelSelector {
  string label_name = 1;
  string value = 2;
}

message LabelSelectorSet {
  map<string, string> selectors = 1;
}